# workshop-ai-image

./: .gitignore  LICENSE  README.md  pyproject.toml
src/workshop-ai-image/: app.py  inference.py  model.py  model_manager.py
