[project]
name = "workshop-ai-image"
version = "1.0.0"
description = ""
authors = [
    {name = "Jorge Torregrosa Lloret",email = "jorge.torregrosa@plainconcepts.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "transformers (>=4.51.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "gradio (>=5.23.3,<6.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "tokenizers (>=0.21.1,<0.22.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "peft (>=0.15.1,<0.16.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "controlnet-aux (>=0.0.9,<0.0.10)"
]

[tool.poetry]
packages = [{include = "workshop-ai-image", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
